# nix-build-results

./: CMakeLists.txt  default.nix  flake.nix  main.cpp  test.txt
